[gd_scene load_steps=8 format=3 uid="uid://dlqkv7m2c68hs"]

[ext_resource type="Script" uid="uid://c7xy4m1i6xldv" path="res://UI/VictoryScreen/victory_screen.gd" id="1_vic"]
[ext_resource type="Texture2D" uid="uid://bdylnvm06f5fm" path="res://Art/UI/RealUI/Panel.png" id="2_vic"]
[ext_resource type="Texture2D" uid="uid://bki3p3jojmdp4" path="res://Art/UI/RealUI/Button.png" id="3_vic"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_panel"]
texture = ExtResource("2_vic")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0
modulate_color = Color(0.29634, 0.282073, 0.179352, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_button_normal"]
texture = ExtResource("3_vic")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0
modulate_color = Color(0.599913, 0.620291, 0.628985, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_button_hover"]
texture = ExtResource("3_vic")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0
modulate_color = Color(0.757665, 0.791826, 0.80549, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_button_pressed"]
texture = ExtResource("3_vic")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0
modulate_color = Color(0.466057, 0.466057, 0.466057, 1)

[node name="VictoryScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vic")

[node name="BackgroundDim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 64
text = "VICTORY!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.85, 1)
theme_override_font_sizes/font_size = 24
text = "You survived all 10 waves!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.75, 1)
theme_override_font_sizes/font_size = 20
text = "Gold Collected: 0
Waves Survived: 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MainMenuButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_button_normal")
theme_override_styles/hover = SubResource("StyleBoxTexture_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxTexture_button_pressed")
text = "Main Menu"

[node name="PlayAgainButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_button_normal")
theme_override_styles/hover = SubResource("StyleBoxTexture_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxTexture_button_pressed")
text = "Play Again"

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
